<resources>
    <string name="app_name" translatable="false">My Pets</string>
    <string name="vetPassport">Vet passport</string>
    <string name="name">Name</string>
    <string name="nameList">Name:</string>
    <string name="timeList">Time:</string>
    <string name="manufacturerList">Manufacturer:</string>
    <string name="doseList">Dose:</string>
    <string name="veterinarianList">Veterinarian:</string>
    <string name="anesthesiaList">Anesthesia:</string>
    <string name="google">Google account</string>
    <string name="phone">Phone number</string>
    <string name="update">Update</string>
    <string name="nameProduct">Name of product</string>
    <string name="manufacturer">Manufacturer</string>
    <string name="dose">Dose</string>
    <string name="dateDehelmintization">Date of dehelmintization</string>
    <string name="timeDehelmintization">Time of dehelmintization</string>
    <string name="veterinarian">Veterinarian</string>
    <string name="description">Description</string>
    <string name="breed">Breed</string>
    <string name="sex">Sex</string>
    <string name="birthday">Birthday</string>
    <string name="hair">Hair</string>
    <string name="create">Create</string>
    <string name="species">Species</string>
    <string name="aboutMe">About me</string>
    <string name="settings">Settings</string>
    <string name="signOut">Sign out</string>
    <string name="anesthesia">Anesthesia</string>
    <string name="dateTreatment">Date of treatment</string>
    <string name="date_of_surgical_procedure">Date of surgical procedure</string>
    <string name="userSignedOut">You are out</string>
    <string name="typeVaccine">Type of vaccine</string>
    <string name="dateVaccine">Date of vaccination</string>
    <string name="validUntil">Valid until</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_notes">Title</string>
    <string name="type_of_surgical_procedure">Type of surgical procedure</string>
    <string name="title">Title: </string>
    <string name="deleteQuestion">Are you sure you want to delete this note?</string>
    <string name="deletePetProfile">Are you sure you want to delete this pet profile?</string>
    <string name="deleted">Deleted</string>
    <string name="deleteButton">Delete this pet profile</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <!-- Preference Titles -->
    <string name="language_header">Language</string>
    <string name="sound_header">Sounds</string>

    <!-- Language Preferences -->
    <string name="language_title">Default language</string>

    <!-- Sync Preferences -->
    <string name="sound_title">Disable</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_vet_passport">VetPassportActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Pets name</string>
    <string name="nav_header_subtitle">Pets age</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Notes</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Vaccines</string>
    <string name="menu_procedures">Surgical procedures</string>
    <string name="menu_treatment">Treatment</string>
    <string name="dehelmintization">Dehelmintization</string>
    <string name="reproduction">Reproduction</string>
    <string name="identification">Identification</string>
    <string name="from_external_parasites">From external parasites</string>
    <string name="treatment_from_external_parasites">Treatment from external parasites</string>
    <string name="title_activity_pet_profile">PetProfileActivity</string>
    <string name="back">Back</string>
    <string name="dateHeat">Date of heat</string>
    <string name="dateMating">Date of mating</string>
    <string name="dateBirth">Date of birth</string>
    <string name="numberOfTheLitter">Number of the litter</string>
    <string name="dateOfHeatList">Date od heat:</string>
    <string name="dateOfMatingList">Date of mating:</string>
    <string name="numberOfTheLitterList">Number of the litter:</string>
    <string name="pinned">Pinned</string>
    <string name="microchipNumber">Microchip number</string>
    <string name="dateOfMicrochipping">Date of microchipping</string>
    <string name="microchipLocation">Microchip location</string>
    <string name="tattooNumber">Tattoo number</string>
    <string name="dateOfTattooing">Date of tattooing</string>
    <string name="imageUploaded">Image Uploaded!!</string>
    <string name="imageWarning">It takes time to load the image</string>
    <string name="saved">Saved</string>
    <string name="userInf_header">User profile</string>
    <string name="userInf_title">Delete a user profile</string>
    <string name="theme">Theme</string>
    <string name="themeChoose">Dark theme</string>
    <string name="galleryImage">Gallary image</string>
    <string name="notElem">there are no elements here yet</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title_activity_test">Test</string>
    <string name="title_activity_testtt">Testtt</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="inputName">Enter the pet\'s name</string>
</resources>