<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/theme">

        <SwitchPreferenceCompat
            app:key="sound"
            app:title="@string/themeChoise" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/language_header">

        <ListPreference
            app:defaultValue="Русский"
            app:entries="@array/language_entries"
            app:entryValues="@array/language_values"
            app:key="language"
            app:title="@string/language_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/sound_header">

        <SwitchPreferenceCompat
            app:key="sound"
            app:title="@string/sound_title" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/userInf_header">

        <!--Удалить профиль пользователя-->

    </PreferenceCategory>

</PreferenceScreen>