<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/nav_baseGroup"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_notes"
            android:icon="@drawable/nav_notes"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/nav_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_vaccines"
            android:icon="@drawable/nav_vaccines"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_procedures"
            android:icon="@drawable/nav_procedures"
            android:title="@string/menu_procedures" />
        <item
            android:id="@+id/nav_treatment"
            android:icon="@drawable/nav_treatment"
            android:title="@string/from_external_parasites" />
        <item
            android:id="@+id/nav_dehelmintization"
            android:icon="@drawable/nav_dehelmintization"
            android:title="@string/dehelmintization" />
        <item
            android:id="@+id/nav_reproduction"
            android:icon="@drawable/nav_reproduction"
            android:title="@string/reproduction" />
        <item
            android:id="@+id/nav_identification"
            android:icon="@drawable/nav_identification"
            android:title="@string/identification" />
    </group>

    <group
        android:id="@+id/nav_lowerGroup"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_settings"
            android:title="settings"/>
        <item
            android:id="@+id/nav_aboutMe"
            android:title="about me"/>
        <item
            android:id="@+id/nav_signOut"
            android:title="sign out"/>
    </group>
</menu>