<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_notes">

    <fragment
        android:id="@+id/nav_notes"
        android:name="com.hhh.mypetsapp.ui.notes.NotesFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_notes" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.hhh.mypetsapp.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_vaccines"
        android:name="com.hhh.mypetsapp.ui.vaccines.VaccinesFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_vaccines" />

    <fragment
        android:id="@+id/nav_procedures"
        android:name="com.hhh.mypetsapp.ui.surgical.SurgicalProceduresFragment"
        android:label="@string/menu_procedures"
        tools:layout="@layout/fragment_surgical_procedures" />

    <fragment
        android:id="@+id/nav_treatment"
        android:name="com.hhh.mypetsapp.ui.treatment.TreatmentFragment"
        android:label="@string/menu_treatment"
        tools:layout="@layout/treatment_fragment" />

    <fragment
        android:id="@+id/nav_dehelmintization"
        android:name="com.hhh.mypetsapp.ui.dehelmintization.DehelmintizationFragment"
        android:label="@string/dehelmintization"
        tools:layout="@layout/fragment_dehelmintization" />

    <fragment
        android:id="@+id/nav_reproduction"
        android:name="com.hhh.mypetsapp.ui.reproduction.ReproductionFragment"
        android:label="@string/reproduction"
        tools:layout="@layout/fragment_reproduction" />

    <fragment
        android:id="@+id/nav_identification"
        android:name="com.hhh.mypetsapp.ui.identification.IdentificationFragment"
        android:label="@string/identification"
        tools:layout="@layout/fragment_identification" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.hhh.mypetsapp.SettingsActivity$SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/settings_activity" />

    <fragment
        android:id="@+id/nav_aboutMe"
        android:name="com.hhh.mypetsapp.AboutMeFragment"
        android:label="@string/settings"
        tools:layout="@layout/activity_about_me" />
</navigation>