<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".PetProfileActivity"
    tools:showIn="@layout/activity_pet_profile">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="7dp"
                android:hint="@string/species">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/petSpecies"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/breed">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/petBreed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="7dp"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:fontFamily="monospace"
                android:paddingLeft="4dp"
                android:text="@string/sex"
                android:textColor="@color/hint"
                android:textSize="12dp" />

            <Spinner
                android:id="@+id/spinnerSex"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="7dp"
                android:hint="@string/birthday">

                <EditText
                    android:id="@+id/petBirthday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:onClick="onClickBirthday" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="7dp"
                android:hint="@string/hair">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/petHair"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/buttonUpdate"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="7dp"
                android:onClick="updateInformationForPet"
                android:text="@string/update" />

            <Button
                android:id="@+id/buttonBack"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="7dp"
                android:text="@string/back" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="7dp"
                android:background="@color/purple_200" />

            <Button
                android:id="@+id/buttonDelete"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="7dp"
                android:text="@string/deleteButton" />

        </LinearLayout>
    </ScrollView>

</androidx.core.widget.NestedScrollView>