<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".NewPetActivity"
    tools:showIn="@layout/activity_scrolling">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="7dp"
                android:hint="@string/name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/petNewName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="7dp"
                android:hint="@string/species">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/petNewSpecies"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/breed">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/petNewBreed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:paddingLeft="4dp"
                android:textSize="12dp"
                android:fontFamily="monospace"
                android:text="@string/sex"
                android:textColor="@color/hint" />

            <Spinner
                android:id="@+id/spinnerNewSex"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="7dp"
                android:hint="@string/birthday">

                <EditText
                    android:id="@+id/petNewBirthday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="onClickBirthday"
                    android:focusable="false" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="7dp"
                android:hint="@string/hair">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/petNewHair"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:layout_marginTop="7dp"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                style="@style/buttonStyle"
                android:text="@string/create"
                android:onClick="createInformationForPet" />

        </LinearLayout>
    </ScrollView>

</androidx.core.widget.NestedScrollView>