<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/vaccinesTakerLayout"
    style="@style/Theme.MyPetsApp.NoActionBar"
    android:background="#99C3C8F1"
    tools:context=".sideBar.vaccines.VaccinesTakerActivity">

    <Toolbar
        android:id="@+id/toolbarVaccines"
        android:title="vaccine"
        android:titleTextColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/saveVaccine"
                android:layout_margin="8dp"
                android:src="@drawable/ic_baseline_save_24"
                android:layout_alignParentEnd="true"
                android:background="@color/fui_transparent"
                android:layout_width="?actionBarSize"
                android:layout_height="?actionBarSize"/>

            <ImageView
                android:id="@+id/backVaccines"
                android:layout_width="?actionBarSize"
                android:layout_height="?actionBarSize"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:layout_toStartOf="@+id/saveVaccine"
                android:background="@color/fui_transparent"
                android:src="@drawable/back" />
        </RelativeLayout>
    </Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:paddingLeft="4dp"
                android:textSize="12dp"
                android:fontFamily="monospace"
                android:text="@string/typeVaccine"
                android:textColor="@color/hint" />

            <Spinner
                android:id="@+id/spinnerTypeVaccine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="7dp"
                android:hint="@string/nameProduct">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/nameVaccine"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="monospace" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="7dp"
                android:hint="@string/manufacturer">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/manufacturerVaccine"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="7dp"
                android:hint="@string/dateVaccine">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/dateVaccine"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:onClick="onClickDate"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="7dp"
                android:hint="@string/validUntil">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/validUntilVaccine"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:onClick="onClickValidUntil"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="7dp"
                android:hint="@string/veterinarian">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/veterinarianVaccine"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>